--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
+<html><head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="keywords" content="">
     <meta name="description" content="">
@@ -8,7 +6,7 @@
     <meta content="no-referrer" name="referrer">
     <link rel="shortcut icon" type="image/x-icon" href="/ivt/favicon.png">
     <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
-    <script src="/js/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script><script async="" src="https://www.googletagmanager.com/gtm.js?id=GTM-P3L9X6T"></script><script async="" src="https://connect.facebook.net/en_US/fbevents.js"></script><script src="/js/jquery-3.3.1.min.js"></script>
     <script src="/js/bootstrap.bundle.min.js"></script>
     <script src="/js/lazysizes.min.js" defer=""></script>
     <title>HVAC System Replacement</title>
@@ -49,9 +47,9 @@
         fbq('track', 'PageView');
         fbq('track', 'ViewContent');
     </script>
-    <noscript><img height="1" width="1" style="display:none"
-                   src="https://www.facebook.com/tr?id=462934847768140&ev=PageView&noscript=1"
-    /></noscript>
+    <noscript>&lt;img height="1" width="1" style="display:none"
+                   src="https://www.facebook.com/tr?id=462934847768140&amp;ev=PageView&amp;noscript=1"
+    /&gt;</noscript>
     <!-- End Facebook Pixel Code -->
 
     <!-- Google Tag Manager -->
@@ -66,97 +64,23 @@
     
 </head>
 <body cz-shortcut-listen="true">
+<a href="https://roofingcostguide.com/?SRC=Aff2950&amp;Pub_ID=22-143057&amp;Sub_ID=101&amp;Sub2_ID=2020_f1_0109_idvert_all_30+">
+<img border="0" src="/hvac/idvert_hvac_1.png">
+</a>
 
-<!-- Google Tag Manager (noscript) -->
-<noscript>
-    <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P3L9X6T"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe>
-</noscript>
-    <!-- End Google Tag Manager (noscript) -->
 
-<!-- Main container -->
-<div class="page-container">
     
-<!-- bloc-0 -->
-<div class="bloc l-bloc" id="bloc-0">
-    <div class="container bloc-sm">
-        <div class="row">
-            <div class="col">
-                <nav class="navbar navbar-light row navbar-expand-md d-lg-flex   d-none" role="navigation">
-                    <a class="navbar-brand" href="javascript:void(0);" onclick="Goto()">HVAC System Replacement</a>
-                    <button id="nav-toggle" type="button" class="ml-auto ui-navbar-toggler navbar-toggler border-0 p-0" data-toggle="collapse" data-target=".navbar-1" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse navbar-1">
-                        <ul class="site-navigation nav navbar-nav ml-auto">
-                            <li class="nav-item">
-                                <a href="/index.html" class="nav-link">Home</a>
-                            </li>
-                        </ul>
-                    </div>
-                </nav>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- bloc-0 END -->
 
-<!-- bloc-1 -->
-<div class="bloc tc-black l-bloc" id="bloc-1">
-    <div class="container ">
-        <div class="row">
-            <div class="col">
-                <h2 class="mg-md d-block tc-black">
-                    Special "HVAC System Replacement Service Website" Helps Homeowners Get New Energy-Efficient HVAC System
-                </h2>
-                <h5 class="mg-md">
-                    Thanks to a brilliant web service, homeowners can get the best price on new HVAC system from the top licensed and insured HVAC repair contractors Near You, and New HVAC System can greatly improve energy efficiency and can increase the home value too!
-                </h5>
-                <img src="./idvert_hvac_1.jpg" data-src="" class="img-fluid mx-auto d-block img-style mg-md lazyloaded" data-pagespeed-url-hash="3953851044" onload="">
-                <p class="mg-md">
-                    Investing in a new HVAC system for your home comes with many benefits. First, you will see a big reduction in your energy bills. Many studies show that installing a new HVAC system can reduce utility bills. If you hesitate every time your power bill comes, it’s time to invest in a new HVAC system. Then you can feel good about seeing how much money you’re saving each month.
-                </p>
-                <p>
-                    <strong>
-                        If you’re looking for a specialist for air conditioning repair, or need service or installation of a new unit, click below to get a free quote.
-                    </strong>
-                </p>
-                <div class="text-center">
-                    <a href="javascript:void(0);" onclick="Goto()" class="btn btn-bloc-1-style btn-ferrari-red btn-lg">See if you qualify</a>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- bloc-1 END -->
 
-<!-- ScrollToTop Button -->
-<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget(&#39;1&#39;,this)"><span class="fa fa-chevron-up"></span></a>
-<!-- ScrollToTop Button END-->
 
-<!-- bloc-2 -->
-<div class="bloc l-bloc" id="bloc-2">
-    <div class="container bloc-md">
-        <div class="row">
-            <div class="col">
 
-                <p class="text-lg-right text-md-right text-sm-right mg-lg p-bloc-2-style">
-                    <a href="/index.html">Home</a> |&nbsp;<a href="/privacy-policy.html">Privacy Policy</a>&nbsp;|&nbsp;<a href="/terms-and-conditions.html">Terms</a>
-                </p>
-                <div class="form-group">
-                    <p class="mx-auto d-block text-lg-center text-md-center text-sm-center">
-                        Copyright © 2019. All right reserved.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- bloc-2 END -->
 
-</div>
-<!-- Main container END -->
-<script src="/js/scrollFX.js"></script>
-<!-- Preloader -->
-<!-- Preloader END -->
+
+
+
+
+
+
+
+
 </body></html>
