--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 </head>
 <body cz-shortcut-listen="true">
 <a href="https://roofingcostguide.com/?SRC=Aff2950&amp;Pub_ID=22-143057&amp;Sub_ID=101&amp;Sub2_ID=2020_f1_0109_idvert_all_30+">
-<img border="0" src="/hvac/idvert_hvac_1.png">
+<img border="0" src="./hvac/idvert_hvac_1.png">
 </a>
 
 
