--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
     
 </head>
 <body cz-shortcut-listen="true">
-<a href="https://roofingcostguide.com/?SRC=Aff2950&amp;Pub_ID=22-143057&amp;Sub_ID=101&amp;Sub2_ID=2020_f1_0109_idvert_all_30+">
-<img border="0" src="https://github.com/leongao890620/leongao890620.github.io/blob/master/hvac/hvac.png">
+<a href="https://idaffilatetrk.com/?a=13&c=20&s1=">
+<img border="0" src="hvac/hvac.png">
 </a>
 
 
