--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta content="no-referrer" name="referrer">
     <link rel="shortcut icon" type="image/x-icon" href="/ivt/favicon.png">
     <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
-    <script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script><script async="" src="https://www.googletagmanager.com/gtm.js?id=GTM-P3L9X6T"></script><script async="" src="https://connect.facebook.net/en_US/fbevents.js"></script><script src="/js/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script><script async="" src="https://www.googletagmanager.com/gtm.js?id=GTM-P3L9X6T"></script><script async="" src="https://connect.facebook.net/en_US/fbevents.js"></script><script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script><script async="" src="https://www.googletagmanager.com/gtm.js?id=GTM-P3L9X6T"></script><script async="" src="https://connect.facebook.net/en_US/fbevents.js"></script><script src="/js/jquery-3.3.1.min.js"></script>
     <script src="/js/bootstrap.bundle.min.js"></script>
     <script src="/js/lazysizes.min.js" defer=""></script>
     <title>HVAC System Replacement</title>
@@ -47,9 +47,9 @@
         fbq('track', 'PageView');
         fbq('track', 'ViewContent');
     </script>
-    <noscript>&lt;img height="1" width="1" style="display:none"
-                   src="https://www.facebook.com/tr?id=462934847768140&amp;ev=PageView&amp;noscript=1"
-    /&gt;</noscript>
+    <noscript>&amp;lt;img height="1" width="1" style="display:none"
+                   src="https://www.facebook.com/tr?id=462934847768140&amp;amp;ev=PageView&amp;amp;noscript=1"
+    /&amp;gt;</noscript>
     <!-- End Facebook Pixel Code -->
 
     <!-- Google Tag Manager -->
@@ -64,12 +64,21 @@
     
 </head>
 <body cz-shortcut-listen="true">
-<a href="https://idaffilatetrk.com/?a=13&c=20&s1=">
+<div style="width:auto; margin:0 auto; height:auto;">
+<p style="text-align: center;">
+<a href="https://idaffilatetrk.com/?a=13&amp;c=20&amp;s1=">
 <img border="0" src="hvac/hvac.png">
-</a>
+
+</a></p></div>
 
 
     
+
+
+
+
+
+
 
 
 
